--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@fluentui/react-components": "^9.7.1",
+    "pocketbase": "^0.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-loader-spinner": "^5.3.4",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.4.3"
   },
